[package]
name = "mandelbrust"
version = "0.1.0"
authors = ["Thomas Vigouroux <tomvig38@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-complex = "*"
image = "0.23.4"
crossbeam-channel = "0.4.2"
structopt = "0.3.14"
num_cpus = "1.13.1"
